Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -231,7 +231,7 @@
         "bdvgnEAYTsOp",
         "Hh1tMP58_R_P"
       ],
-      "authorship_tag": "ABX9TyMMtb/X7NEccgYFRtOAZxsr",
+      "authorship_tag": "ABX9TyNOZROXYHGxGAj1BjSt/oKK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -287,6 +287,33 @@
       "source": [
         "### 1단계 ~ 4단계==========="
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "g9MBGW5fOxEr"
+      },
+      "source": [
+        "#### 2439번 : rjust()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xRcoxP3QOxEx"
+      },
+      "source": [
+        "print(\n",
+        "'''         ,r'\"7\n",
+        "r`-_   ,'  ,/\n",
+        " \\. \". L_r'\n",
+        "   `~\\/\n",
+        "      |\n",
+        "      |'''\n",
+        ")"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -578,7 +605,7 @@
         "id": "hd-9cFVbd81N"
       },
       "source": [
-        "### **5단계 : 1차원 배열===========**"
+        "### **4단계 : 1차원 배열===========**"
       ]
     },
     {
@@ -860,7 +887,7 @@
         "id": "n12SANb4ewi1"
       },
       "source": [
-        "### **6단계 : 함수===========**"
+        "### **5단계 : 함수===========**"
       ]
     },
     {
@@ -970,7 +997,7 @@
         "id": "RVUMmYudeX57"
       },
       "source": [
-        "### **7단계 : 문자열===========**"
+        "### **6단계 : 문자열===========**"
       ]
     },
     {
@@ -1323,7 +1350,7 @@
         "id": "L635P9aDR41L"
       },
       "source": [
-        "### **8단계 : 기본수학1===========**"
+        "### **7단계 : 기본수학1===========**"
       ]
     },
     {
@@ -1679,7 +1706,7 @@
         "id": "wBFPqXNuR8ne"
       },
       "source": [
-        "### **9단계 : 기본수학2===========**"
+        "### **8단계 : 기본수학2===========**"
       ]
     },
     {
@@ -2252,7 +2279,7 @@
         "id": "-muS8KkPIVzI"
       },
       "source": [
-        "### **10단계 : 재귀===========**"
+        "### **9단계 : 재귀===========**"
       ]
     },
     {
@@ -2311,6 +2338,47 @@
         "\n",
         "n = int(input())\n",
         "print(pv(n))"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "YynwjphPPrGr"
+      },
+      "source": [
+        "####  17478번"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "D8mLobDbPrGs"
+      },
+      "source": [
+        "def recursion(n,x):\n",
+        "    if n == x:\n",
+        "        print('____' * x + '\"재귀함수가 뭔가요?\"')\n",
+        "        print('____' * x + '\"재귀함수는 자기 자신을 호출하는 함수라네\"')\n",
+        "        print('____' * x + '라고 답변하였지.')\n",
+        "        return\n",
+        "\n",
+        "    print('____' * x + '\"재귀함수가 뭔가요?\"')\n",
+        "    print('____' * x + '\"잘 들어보게. 옛날옛날 한 산 꼭대기에 이세상 모든 지식을 통달한 선인이 있었어.')\n",
+        "    print('____' * x + '마을 사람들은 모두 그 선인에게 수많은 질문을 했고, 모두 지혜롭게 대답해 주었지.')\n",
+        "    print('____' * x + '그의 답은 대부분 옳았다고 하네. 그런데 어느 날, 그 선인에게 한 선비가 찾아와서 물었어.\"')\n",
+        "    recursion(n,x+1)\n",
+        "    print('____' * x + '라고 답변하였지.')\n",
+        "\n",
+        "def main():\n",
+        "    n = int(input())\n",
+        "    print('어느 한 컴퓨터공학과 학생이 유명한 교수님을 찾아가 물었다.')\n",
+        "\n",
+        "    recursion(n, 0)\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "    main()"
       ],
       "execution_count": null,
       "outputs": []
@@ -15407,13 +15475,26 @@
       "cell_type": "code",
       "source": [
         "import sys\n",
-        "sys.setrecursionlimit(int(1e9))\n",
         "input = sys.stdin.readline\n",
         "\n",
-        "def main():\n",
-        "    a, b = input().rstrip('\\n').split()\n",
+        "def count(x1, x2):          # 두 문자열의 다른 철자를 세는 함수\n",
+        "    ans = 0                     # 결과 값 변수 생성\n",
+        "    for i in range(len(x1)):    # 짧은 문자열 길이 만큼 반복\n",
+        "        if x1[i] != x2[i]:          # i번째 원소가 같지 않으면\n",
+        "            ans += 1                    # 결과 값 변수 1 증가\n",
+        "    \n",
+        "    return ans                  # 결과 값 리턴\n",
         "\n",
-        "    p1 = \n",
+        "def main():                         # 메인 함수\n",
+        "    a, b = input().rstrip('\\n').split() # 두 문자열 입력\n",
+        "\n",
+        "    ans = count(a, b)                   # 두 문자열 count 함수 진행\n",
+        "\n",
+        "    for i in range(len(b) - len(a)+1):  # a 문자열을 b문자열에 왼쪽부터 count 함수 실행\n",
+        "        if count(a,b[i:]) < ans:            # b문자열 i번째 원소부터 시작한 count 값이 더 작으면\n",
+        "            ans = count(a,b[i:])                # 결과 값 업데이트\n",
+        "    \n",
+        "    print(ans)                          # 결과 출력\n",
         "\n",
         "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
         "    main()                      # 메인 함수 실행"
@@ -15441,9 +15522,9 @@
         "#input = sys.stdin.readline\n",
         "\n",
         "def main():\n",
-        "    a, b = input().rstrip('\\n').split()\n",
+        "    a, b = input().rstrip('\\n').split()     # 두 이진문자 입력\n",
         "    \n",
-        "    print(bin(int(a,2) + int(b,2))[2:])\n",
+        "    print(bin(int(a,2) + int(b,2))[2:])     # 10진수 변환 후 2인수 로 출력\n",
         "\n",
         "\n",
         "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
