Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -231,7 +231,7 @@
         "bdvgnEAYTsOp",
         "Hh1tMP58_R_P"
       ],
-      "authorship_tag": "ABX9TyNOZROXYHGxGAj1BjSt/oKK",
+      "authorship_tag": "ABX9TyPRYP+5C/raEIA+HGH3fBo1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -12789,7 +12789,7 @@
         "id": "Juei-roPnbMe"
       },
       "source": [
-        "### 단계 : ===========**"
+        "### 35단계 : 위상 정렬===========**"
       ]
     },
     {
@@ -12798,13 +12798,158 @@
         "id": "HLUKhH5_nbMf"
       },
       "source": [
-        "#### "
+        "####  (*)2252번 : 위상정렬"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "V_fPK_usnbMf"
+      },
+      "source": [
+        "# https://m.blog.naver.com/ndb796/221236874984\n",
+        "import sys\n",
+        "from collections import deque\n",
+        "\n",
+        "sys.setrecursionlimit(int(1e9))\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "def main():\n",
+        "    n, m = map(int, input().split())\n",
+        "    \n",
+        "    inDegree = [0] * (n+1)\n",
+        "    graph = [[] for _ in range(n+1)]\n",
+        "\n",
+        "    for _ in range(m):\n",
+        "        a, b = map(int, input().split())\n",
+        "        graph[a].append(b)\n",
+        "        inDegree[b] += 1\n",
+        "    \n",
+        "    q = deque()\n",
+        "    for i in range(1, n+1):\n",
+        "        if not inDegree[i]:\n",
+        "            q.append(i)\n",
+        "\n",
+        "    result = []\n",
+        "    while q:\n",
+        "        t = q.popleft()\n",
+        "        result.append(t)\n",
+        "        for i in graph[t]:\n",
+        "            inDegree[i] -= 1\n",
+        "            if not inDegree[i]:\n",
+        "                q.append(i)\n",
+        "    \n",
+        "    print(*result)\n",
+        "    \n",
+        "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
+        "    main()                      # 메인 함수 실행"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "yZ406ayIdGPX"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xKaU5RmMdGPX"
+      },
+      "source": [
+        "import sys\n",
+        "sys.setrecursionlimit(int(1e9))\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "def main():\n",
+        "    \n",
+        "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
+        "    main()                      # 메인 함수 실행"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "MSXZj-URdGTF"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XL5lvQ5QdGTG"
+      },
+      "source": [
+        "import sys\n",
+        "sys.setrecursionlimit(int(1e9))\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "def main():\n",
+        "    \n",
+        "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
+        "    main()                      # 메인 함수 실행"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "gapslwA3dGan"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GrVRAUYOdGan"
+      },
+      "source": [
+        "import sys\n",
+        "sys.setrecursionlimit(int(1e9))\n",
+        "input = sys.stdin.readline\n",
+        "\n",
+        "def main():\n",
+        "    \n",
+        "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
+        "    main()                      # 메인 함수 실행"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "BFqec5POdAk5"
+      },
+      "source": [
+        "### 단계 : ===========**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "GKDK-Nj6dAk-"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "A5mZ58DBdAk-"
       },
       "source": [
         "import sys\n",
