Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -173,9 +173,11 @@
         "-lMNyxheevNS",
         "W1bsY1TGewVw",
         "jz9aOmpkewVw",
+        "fwCGk-rKnTUM",
         "sYf1TsbxnTUM",
         "YTYcjpPmy4pj",
-        "HLUKhH5_nbMf",
+        "A1uz7OJKnZV5",
+        "BFqec5POdAk5",
         "WzwUHBI4pjsC",
         "n-jLje1Epjv5",
         "kg3C85P2pkCh",
@@ -241,7 +243,7 @@
         "ifIL4DrH_hsq",
         "V3koBVOiBt1v"
       ],
-      "authorship_tag": "ABX9TyMuA9ElPh5QDpiwzh3Qzcox",
+      "authorship_tag": "ABX9TyNoJSUg0+EbhKTeAjALa9Ay",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -11924,7 +11926,7 @@
         "id": "fwCGk-rKnTUM"
       },
       "source": [
-        "### 34 단계 : (*)동적 계획법 3(비트마스크, 원형 구성)===========**"
+        "### 34 단계 : (\\*)동적 계획법 3(비트마스크, 원형 구성)===========**"
       ]
     },
     {
@@ -12902,7 +12904,7 @@
         "id": "MSXZj-URdGTF"
       },
       "source": [
-        "#### 번"
+        "####  1766번"
       ]
     },
     {
@@ -12911,38 +12913,37 @@
         "id": "XL5lvQ5QdGTG"
       },
       "source": [
-        "import sys\n",
+        "# 우선순위 큐를 사용 안하고 풀면 메모리 초과가 났다.\n",
+        "import sys, heapq\n",
         "sys.setrecursionlimit(int(1e9))\n",
         "input = sys.stdin.readline\n",
         "\n",
-        "def main():\n",
+        "def main():                             # 메인 함수                \n",
+        "    n, m = map(int, input().split())        # 문제의 수와 정보의 개수 입력\n",
+        "\n",
+        "    graph = [[] for i in range(n+1)]        # 그래프 생성\n",
+        "    inDegree = [0 for _ in range(n+1)]      # 진입 차수 리스트생성\n",
         "    \n",
-        "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
-        "    main()                      # 메인 함수 실행"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "gapslwA3dGan"
-      },
-      "source": [
-        "#### 번"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "GrVRAUYOdGan"
-      },
-      "source": [
-        "import sys\n",
-        "sys.setrecursionlimit(int(1e9))\n",
-        "input = sys.stdin.readline\n",
+        "    for _ in range(m):                      \n",
+        "        a, b = map(int, input().split())        # 순서쌍 입력\n",
+        "        graph[a].append(b)                      # a에서 b로 가는 Edge 생성\n",
+        "        inDegree[b] += 1                        # b의 진입 차수 1 증가\n",
         "\n",
-        "def main():\n",
+        "    q = []                                  # 우선순위 큐 생성\n",
+        "    for i in range(1,n+1):                  # 각 문제의 진입차수 탐색\n",
+        "        if not inDegree[i]:                     # 진입 차수가 0이면\n",
+        "            heapq.heappush(q, i)                    # 우선 순위 큐에 추가\n",
+        "\n",
+        "    result = []                             # 결과 리스트 생성\n",
+        "    while q:                                # 우선 순위 큐가 존재하는 동안 반복\n",
+        "        t = heapq.heappop(q)                    # 최소 힙의 값\n",
+        "        result.append(t)                        # 결과 리스트에 해당 값 추가\n",
+        "        for i in graph[t]:                      # 해당 문제의 Edge 탐색\n",
+        "            inDegree[i] -= 1                        # 해당 문제가 진입하는 Node의 진입 차수 1 감소\n",
+        "            if not inDegree[i]:                     # 헤당 문제가 진입한 Node의 진입 차수가 0이면\n",
+        "                heapq.heappush(q, i)                    # 우선 순위 큐에 추가\n",
+        "        \n",
+        "    print(*result)                          # 결과 값 출력\n",
         "    \n",
         "if __name__ == '__main__':  # 프로그램 시작점 지정\n",
         "    main()                      # 메인 함수 실행"
